# com2sem

./: LICENSE.txt  README.md  requirements.txt  setup.cfg  setup.py
com2sem/: __init__.py  com.py  conf.py  tdc.py
example-target-space/: semantic_space.csv  semantic_space.yaml
tests/: README-TESTS.md  c2s_eval_config.yaml  outlier_detection.py  word_clustering.py  word_clustering_semcat.py  word_similarity.py
