[metadata]
name = com2sem
version = 0.0.1
license = MIT License
author = Sebastian Schmidt
url = https://github.com/NeclusMandarius/com2sem.git
author_email = nm.sebastian.schmidt@gmail.com
description = Package providing an implementation for decision tree based Word Embedding

[options]
packages = com2sem
install_requires =
    scikit-learn
    numpy
    PyYAML
